# Recite_English

./: .gitignore  .ninja_deps  .ninja_log  BACKSPACE_SUPPORT_REPORT.md  CMakeLists.txt  README.md  REFACTOR_REPORT.md  account.c  account.h  accounts.txt  app_state.c  app_state.h  build.sh  build_appimage.sh  build_nsis.bat  config.h  fonts.c  gitcommit.sh  improvement_suggestions.md  learn.c  main.c  menu_callbacks.c  menu_callbacks.h  plan.c  plan.h  plans.txt  plans_1.txt  plans_h.txt  plans_hhlong.txt  progress.txt  raylib_font.md  raylib_word_ui.c  raylib_word_ui.h  tree_menu.c  tree_menu.h  words.c  words.h  words.h.bak  words.txt
.github/workflows/: release.yml
data/: accounts.txt  plans.txt  progress.txt  words.txt
docs/: API_GUIDE.md  CODE_ARCHITECTURE.md  CODE_IMPROVE.md  DOWNLOAD.md  PACKAGE.md  README.md  USER_MANUAL.md  improvement_suggestions.md  课程设计报告.md
packaging/AppImage/: AppRun  背单词软件.desktop
packaging/NSIS/: LICENSE.txt  installer.nsi
src/: main.c
src/core/: app_state.c  app_state.h  config.h  tree_menu.c  tree_menu.h
src/modules/: account.c  account.h  fonts.c  fonts.h  plan.c  plan.h  words.c  words.h
src/ui/: menu_callbacks.c  menu_callbacks.h  raylib_word_ui.c  raylib_word_ui.h
src/ui/pages/: page_account.c  page_card_review.c  page_home.c  page_learn.c  page_plan.c  page_review_root.c  page_search.c  page_select_word.c  page_settings.c  page_test.c  page_word_manager.c  pages.h
